[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "wsl-wrappers"
description = "Wrappers for calling WSL commands from Windows."
version = "0.1.0"
authors = ["Nathan Hunt <neighthan.hunt@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/neighthan/wsl-wrappers"

[tool.poetry.scripts]
pdf2svg = "wsl_wrappers:scripts_api.pdf2svg"
pdflatex = "wsl_wrappers:scripts_api.pdflatex"

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
twine = "^1.13"
invoke = "^1.2"
